# scope

./: .env.dev.example  .gitignore
backend/: Cargo.toml  README.md
backend/src/: main.rs
backend/src/core/: mod.rs
backend/src/core/case_notion/: main.rs
backend/src/core/conformance/: object_centric_language_abstraction_struct.rs
backend/src/core/df2_miner/: build_relations_fns.rs  convert_to_json_tree.rs  divergence_free_dfg.rs  export_json.rs  fallthrough_cuts.rs  interaction_patterns.rs  main.rs  mod.rs  ocpt_generator.rs  start_cuts.rs  start_cuts_opti.rs
backend/src/core/event_object_frequencies/: histogram_builder.rs  histogram_filtering.rs  mod.rs
backend/src/core/ocel1_to_ocel2_converter/: converter.rs  mod.rs  utils.rs
backend/src/core/struct_converters/: mod.rs  ocel_1_ocel_2_converter.rs  ocpt_frontend_backend.rs
backend/src/core/utils/: dfr.rs  flatten.rs  mod.rs
backend/src/handlers/: conformance.rs  event_object_frequencies.rs  mod.rs  ocel.rs  ocpt.rs  upload.rs
backend/src/models/: dfg.rs  mod.rs  ocel.rs  ocel1.rs  ocel1_to_ocel.rs  ocel_sid.rs  ocpt.rs  ocpt2.rs
backend/src/routes/: mod.rs  upload.rs
backend/src/routes/v1/: conformance.rs  event_object_frequencies.rs  mod.rs  objects.rs  upload.rs
frontend/: .prettierrc  README.md  components.json  index.html  inspect.json  jest.config.ts  package-lock.json  package.json  syncEnv.ts  tailwind.config.js  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/public/trees/: small_ocpt.json
frontend/src/: index.css  main.tsx  store.ts  vite-env.d.ts
(+135 files in other folders)
