[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["http2", "macros", "ws"] }
axum-extra = { version = "0.10.1", features = ["multipart"] }
bytes = "1.10.1"
chrono = "0.4.41"
cors = "0.1.0"
futures-util = "0.3.31"
multipart = "0.18.0"
process_mining = "0.3.25"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
tokio = { version = "1.46.1", features = ["full"] }
tower-http = { version ="0.6.6", features = ["cors"] }
uuid = "1.17.0"


